syntax = "proto3";

package gamedef;

// ==========================================================
// 系统消息
// ==========================================================

// 一个连接接入
message SessionAccepted
{
	
}

// 已连接
message SessionConnected
{
	
}

// 接受错误
message SessionAcceptFailed
{
	string Reason = 1;
}

// 连接错误
message SessionConnectFailed
{
	string Reason = 1;
}

// 连接断开
message SessionClosed
{
	string Reason = 1;
}


// ==========================================================
// RPC
// ==========================================================

// 请求
message RemoteCallREQ
{	                 
	uint32 MsgID = 1;		// 消息号
	
	bytes Data = 2;		// 用户封包
	
	int64 CallID = 3;
}

// 回应
message RemoteCallACK
{
	uint32 MsgID = 1;		// 消息号
	
	bytes Data = 2;		// 用户封包
	
	int64 CallID = 3;
}



// ==========================================================
// 测试用消息
// ==========================================================
message TestEchoACK
{
	string Content = 1;
	string Content2 = 2;
}
